--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,17 @@
 body {
     font-family: 'Merriweather Sans', sans-serif;
     font-weight: 300;
+    color: #3a3a3a
 }
+
+/* heading and logo */
+ h1, h2 {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #3a3a3a;
+ }
+ #logo {
+     float: left;
+     font-size: 250%;
+ }
