--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,22 @@ body {
  h1, h2 {
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     color: #3a3a3a;
  }
  #logo {
      float: left;
      font-size: 250%;
+ }
+
+ #menu {
+     font-size: 110%;
+     letter-spacing: 3px;
+ }
+
+ #menu li {
+     float: right;
+     list-style-type: none;
+     margin-right: 40px;
+
  }
