--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,14 @@
 }
 
 body {
-    font-family: 'Merriweather Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 300;
-    color: #3a3a3a
+    color: #2a2a2a
 }
 
 /* heading and logo */
  h1, h2 {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: #3a3a3a;
@@ -28,10 +28,25 @@ body {
      font-size: 110%;
      letter-spacing: 3px;
  }
+#menu, #logo{
+    line-height: 75px;
+}
 
  #menu li {
      float: right;
      list-style-type: none;
      margin-right: 40px;
+ }
 
+ #menu a {
+     text-decoration: none;
+     color: inherit;
+ }
+
+ #menu a:hover {
+     border-bottom: 1px dotted #3a3a3a;
+ }
+
+ .active {
+     border-bottom: 1px dotted #3a3a3a;
  }
