--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,16 @@ body {
     color: #2a2a2a
 }
 
-/* heading and logo */
+/* headings and logo */
+
+
  h1, h2 {
     font-family: 'Merriweather Sans', sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: #3a3a3a;
  }
+
  #logo {
      float: left;
      font-size: 250%;
@@ -51,7 +54,7 @@ body {
      border-bottom: 1px dotted #3a3a3a;
  }
 
- /* Hero image */
+ /* hero image */
 
  #hero-outer {
     height: 600px;
@@ -62,7 +65,9 @@ body {
  #hero-image {
      height: 600px;
      width: 100%;
-     background: url(../images/hero-image.jpg) no-repeat;
+     background: url(../images/hero-image.jpg);
+     background-repeat: no-repeat;
+     background-size: 100%;
+     background-position: center;
  }
 
- /* Ilusion of "ZOOM" for hero image*/
