--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,20 +54,38 @@ body {
      border-bottom: 1px dotted #3a3a3a;
  }
 
- /* hero image */
+ /* hero image and cover text */
 
  #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
 }
- 
- #hero-image {
-     height: 600px;
-     width: 100%;
-     background: url(../images/hero-image.jpg);
-     background-repeat: no-repeat;
-     background-size: 100%;
-     background-position: center;
- }
+
+#cover-text, #cover-text h2 {
+    color: #3a3a3a
+}
+
+#hero-image {
+    height: 100%;
+    width: 100%;
+    background: url(../images/hero-image.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+}
+
+#cover-text {
+    font-size: 100%;   
+    font-family: 'Merriweather Sans', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+
+    width: 300px;  
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(70, 67, 98, .7);
+}
 
