--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
  #logo {
      float: left;
      font-size: 250%;
+     margin-left: 30px;
  }
 
  #menu {
@@ -85,8 +86,8 @@ body {
 
     width: 300px;  
     height: 200px;
-    padding-top: 40px;
-    padding-left: 10px;
+    padding-top: 30px;
+    padding-left: 30px;
 
     background-color: rgba(70, 67, 98, .7);
 
@@ -96,3 +97,30 @@ body {
     position: absolute;
 }
 
+/* middle section - (Meet the team) */
+
+#the-team {
+    height: 600px;
+    width: 100%;
+    
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: aqua;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: burlywood;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: chocolate;
+}
