--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ body {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: burlywood;
+
      /* pic later */
 }
 
@@ -133,9 +133,25 @@ hr {
     margin: 3px 0;
 }
 
+.left-about-heading h2 {
+    text-align: center;
+}
+
 .left-about-heading {
     width: 60%;
     float: right;
+    line-height: 20px;
+    clear:both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: center;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
     line-height: 20px;
     clear:both;
     margin-bottom: 50px;
