--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ body {
      border-bottom: 1px dotted #3a3a3a;
  }
 
- /* hero image and cover text */
+ /* hero image and cover text - Home page*/
 
  #hero-outer {
     height: 600px;
@@ -191,3 +191,28 @@ hr {
       display: none;
     }
   }
+
+  /* Services page  */
+
+#service-block {
+    height: 600px;
+    width: 100%;
+    margin-top: 50px;
+    background-color: chartreuse;
+}
+
+#table-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.service-center-align {
+    background-color: rgba(70, 67, 98, .7);
+}
+
+.service-center-align, p {
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
