--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,6 @@ hr {
 }
 
 .center-about-image {
-    margin: 20px o;
     padding: 0;
     width: 100%;
     border-radius: 100px;
@@ -198,7 +197,6 @@ hr {
     height: 600px;
     width: 100%;
     margin-top: 50px;
-    background-color: chartreuse;
 }
 
 #table-block {
@@ -213,6 +211,15 @@ hr {
 
 .service-center-align, p {
     text-align: center;
-    margin-top: 80px;
-    margin-bottom: 40px;
+    margin: 40px 20px;
+}
+
+#our-offer, th, td {
+    border: 1px #3a3a3a dotted;
+    margin: 0 20px;
+}
+
+#book-today-bottom, a {
+    text-align: center;
+    text-decoration: none;
 }
