--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,9 +185,10 @@ hr {
     flex-direction: row;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
     .center-about-image {
-      display: none;
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -228,10 +229,53 @@ hr {
 
  /* Contact Us page  */
 
- .contact-block {
+ #hours-block, .lab-hours {
      display: flex;
+     align-items: center;
      justify-content: center;
-     align-items: center; 
-
-     margin-top: 30px;
+     flex-direction: column;
+     margin: 0;
  }
+
+ #hours-block {
+    background-image: url(../images/contact-background.jpg);
+    width: 100%;
+    height: 300px;
+ }
+
+ .lab-hours {
+    margin: 0;
+    width: 50%;
+ }
+
+ .table-hours {
+     height: 100px;
+     width: 75%;
+     border: 1px #3a3a3a dotted;
+     text-align: center;
+ }
+
+  /* contact page bottom block */
+#address-up {
+    width: 100%;
+    height: 450px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    flex-direction: column;
+}
+
+.address-heading {
+    padding: 20px;
+    margin-top: 10px;
+}
+
+#address-down {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    flex-direction: column;
+}
