--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,11 +271,15 @@ hr {
     margin-top: 10px;
 }
 
-#address-down {
+.address-down, .phone-down {
     width: 100%;
     height: 30px;
     display: flex;
     justify-content: center;    
     align-items: center;
-    flex-direction: column;
+    padding: 5px;
+    border: 5px;
 }
+
+ /* footer */
+ 
