--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ body {
 
     position: absolute;
 }
-/* Welcome pitch */
+/* welcome pitch */
 
 .pitch {
     background-color: rgba(70, 67, 98, .7);
